feat(practice): create practice and assign doctor
